# UAV_control_system

./: .gitignore  CMakeLists.txt  README.md
include/: camera_capture_factory.hpp  camera_capture_opencv.hpp  camera_capture_v4l2.hpp  data_types.hpp  fps_logger.hpp  icamera_capture.hpp  idetection_model_rt.hpp  onnx_blaze_face_model.hpp  onnx_detection_model_rt.hpp  onnx_engine.hpp  onnx_i_model_adapter.hpp  scope_time_logger.hpp  utils.hpp
src/: camera_capture_factory.cpp  camera_capture_opencv.cpp  camera_capture_v4l2.cpp  fps_logger.cpp  main.cpp  onnx_blaze_face_model.cpp  onnx_detection_model_rt.cpp  onnx_engine.cpp  scope_time_logger.cpp  utils.cpp
